BXC-5174 build ffmpeg command from option groups (#3)
* build ffmpeg command from option groups

* DRY things up, update method names

* remove universal audio option, add subtitles enum, add/modify tests

* modify retrieveAudioVideoInfo to return both audio/video info, refactor to run ffprobe once and pass avInfo into methods to get encoding operation and subtitles

* retrieveAudioVideoInfo to account for videos without audio streams, add tests

* add test with audio first